--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<main>
-			<h1>Just... cats!</h1>
+			<h1>Amo Gatos!</h1>
 			<img id="cat" /><br />
 			<button id="change-cat">Change cat</button>
 		</main>
